--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,10 @@
     "Clément",
     "fossorier",
     "Fossorier",
+    "github",
     "LINKEDIN",
+    "vercel",
+    "Vercel",
     "weglot",
     "Weglot"
   ],
